--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "parcel": "^2.2.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.1",
     "process": "^0.11.10"
   },
   "dependencies": {
